# LAN_Transcriber

./: .coveragerc  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ci-requirements.in  ci-requirements.txt  constraints.txt  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-cu121.in  requirements-cu121.txt  requirements.in  requirements.txt  web_transcribe.py
.github/: pull_request_template.md
artifacts/: pr.patch
data/: .gitignore  README.md
docs/: release-checklist.md  runbook.md
lan_app/: __init__.py  api.py  asr_glossary.py  auth.py  calendar.py  config.py  constants.py  conversation_metrics.py  db.py  db_init.py  diagnostics.py  diarization_loader.py  exporter.py  gdrive.py  healthchecks.py  hf_repo.py  jobs.py  locks.py  ms_graph.py  onenote.py  ops.py  pipeline_stages.py  reaper.py  resummarize.py  routing.py  snippet_repair.py  speaker_bank.py  system_status.py  ui.py  ui_routes.py  uploads.py  worker.py  worker_status.py  worker_tasks.py  workers.py
lan_transcriber/: __init__.py  alias_api.py  aliases.py  api.py  artifacts.py  audio_sanitize.py  config.py  gpu_policy.py  llm_chunking.py  llm_client.py  metrics.py  models.py  native_fixups.py  normalizer.py  pipeline.py  runtime_paths.py  torch_safe_globals.py  utils.py
scripts/: ci.sh  make-review-artifacts.sh  remove_mise_repo.sh  smoke_test.py
systemd/: lan-transcriber-api.service  lan-transcriber-worker.service  recording-transcriber.service
tasks/: PR-ARTIFACT-SINGLE-WRITER-01.md  PR-ASR-FORCE-TRANSCRIBE-01.md  PR-CI-01.md  (+152 more)
(+191 files in other folders)
