[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lan-transcriber"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "tenacity",
    "prometheus_client>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lan_transcriber*"]

[tool.coverage.run]
source = ["lan_transcriber"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pip-tools",
]
