[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lan-transcriber"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "tenacity",
    "prometheus_client>=0.19.0",
    "anyio",
    "fastapi",
    "jinja2",
    "python-multipart",
    "redis",
    "rq",
    "pyyaml",
    "pydantic-settings",
    "rapidfuzz",
    "icalendar>=6.0",
    "recurring-ical-events>=3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lan_transcriber*", "lan_app*"]

[tool.setuptools.package-data]
lan_app = ["migrations/*.sql"]

[tool.coverage.run]
source = ["lan_transcriber"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pip-tools",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "respx[router]",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
